[package]
name = "tpm2_cli"
description = "TPM 2.0 command-line interface"
version = "0.4.1"
license = "GPL-3.0-or-later"
homepage = "https://codeberg.org/jarkko/tpm2_library.git"
repository = "https://codeberg.org/jarkko/tpm2_library.git.git"
edition = "2021"
rust-version = "1.78"
readme = "../README.md"

[dependencies]
clap-num = "1.1.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
strum_macros = "0.26.4"
tpm2_call = { path = "../call", version = "0.4.1" }

[[bin]]
name = "tpm2-cli"
path = "src/main.rs"
